backend/kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 579201838441.dkr.ecr.us-east-1.amazonaws.com/ecom_backend_portal_repo:latest
          ports:
            - containerPort: 8080
